--- a/programs/anchor-escrow/Cargo.toml
+++ b/programs/anchor-escrow/Cargo.toml
@@ -17,23 +17,25 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
-anchor-spl = "0.31.1"
+anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
+anchor-spl = "0.32.1"
+solana-account-info = "2.3.0"
 
 [dev-dependencies]
-litesvm = "0.6.1"
-litesvm-token = "0.6.1"
+litesvm = "0.9.1"
+litesvm-token = "0.9.1"
 
-solana-instruction = "2.2.1"
-solana-keypair = "2.2.1"
-solana-native-token = "2.2.1"
-solana-pubkey = "2.2.1"
-solana-signer = "2.2.1"
-solana-system-interface = "1.0.0"
-solana-transaction = "2.2.1"
-solana-message = "2.2.1"
-solana-sdk-ids = "2.2.1"
-spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"]}
-solana-rpc-client = "3.0.3"
-solana-address = "1.0.0"
-solana-account = "2.2.1"
+solana-account = "3.4"
+solana-address = "2.1"
+solana-hash = "4.1"
+solana-instruction = "3.1"
+solana-keypair = "3.1"
+solana-message = "3.0"
+solana-native-token = "3.0"
+solana-sdk-ids = "3.1"
+solana-signer = "3.0"
+solana-system-interface = "3.0"
+solana-transaction = "3.0"
+solana-rpc-client = "2.3"
+spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
+solana-clock = "~3.0"
